# pydmfet

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  requirements.txt  setup.py  test_travis.py
examples/: Br.py  BrI.py  C24.py  C24.xyz  C3H6.py  C3H6_0.xyz  C4H8.py  C4H8.xyz  C5H10.xyz  C5H10_0.xyz  FHF_4H2O.py  FHF_4H2O_1.py  FHF_4H2O_struct.py  FHF_ccsd.py  H4.py  diamond_dfet.py  h10.xyz  h2.py  h_chain.py  hf.xyz  hydrogen-loc.molden  hydrogen-mo.molden  hydrogen.py  hydrogen_dfet.py  read_cube.py  sn2.py  sn2.xyz  test.py  test1.py  test2.xyz  water2.xyz
examples/dmfet_ao/: h_chain.out  h_chain.py
examples/research/: Be.py  Be_dfet.out  Be_hf.out  Be_hf.out.1  Be_pbe.out  Br.out  Br.xyz  BrI.out.1  BrI.out.11  BrI.out.16  BrI.out.20  BrI.xyz  C24.out  C24.out.full  C24.slurm  C24_dfet_ao.out  C24_opt.in  C24_opt.out  C24_opt.slurm  C3H6.out.new  C3H6.py  C3H6.u  C3H6.xyz  C3H6_hf.out  C3H6_p.out  C3H6_pbe.out  C5H10.py  FHF.xyz  FHF_4H2O.out  FHF_4H2O.out.1  FHF_4H2O.out.test  FHF_4H2O.xyz  FHF_4H2O_struct.py  H4.win  H4.wout  O2-graphene.py  O2-graphene_hf.out  O2-graphene_lda.out  O2.py  O2.xyz  (+39 more)
examples/sdmfet/: FHF_4H2O.out  FHF_4H2O.py  FHF_4H2O_struct.xyz
pydmfet/: __init__.py
pydmfet/dfet_ao/: __init__.py  dfet.py  oep.py  scf.py
pydmfet/libcpp/: CMakeLists.txt  INSTALL  __init__.py  fd_hess.py  hess.cpp  mkl_svd.py  oep_hess.py  test.py
pydmfet/libcpp/blas/: CMakeLists.txt  fblas.h
pydmfet/libcpp/hess/: CMakeLists.txt  hess.cpp
pydmfet/libcpp/linalg/: CMakeLists.txt  svd.cpp
pydmfet/libcpp/test/: test_hess.py
pydmfet/libgen/: __init__.py  ops.py
pydmfet/locints/: Makefile  __init__.py  c_wannier90_interface.cpp  comput_amn.cpp  iao_helper.py  localintegrals.py  locints_base.py  locints_wf.py  mmn_wannier90.py
pydmfet/oep/: __init__.py  func_leastsq.py  func_wuyang.py  hess.cpp  init_dens_par.py  legacy.py  mkl_svd.cpp  oep_main.py  oep_main.py.bak  oep_params.py  (+4 more)
tests/: test_travis.py
(+220 files in other folders)
